--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,13 @@
 {
+  "separateMajorMinor": false,
   "extends": [
-    "config:base"
-  ]
+    ":preserveSemverRanges",
+    "group:all",
+    "schedule:monthly",
+    ":maintainLockFilesMonthly"
+  ],
+  "lockFileMaintenance": {
+    "extends": ["group:all"],
+    "commitMessageAction": "Update"
+  }
 }
