--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,11 @@
 {
+  "timezone": "Asia/Hong_Kong",
   "semanticCommits": true,
   "packageRules": [
     {
-      "updateTypes": ["minor"],
-      "extends": ["group:nestMonorepo"]
+      "updateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
     }
-  ]
+  ],
+  "extends": ["config:base"]
 }
