--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/cli": "6.14.2",
     "@nestjs/schematics": "6.9.4",
     "@nestjs/testing": "6.11.11",
+    "@shelf/jest-dynamodb": "^1.7.0",
     "@types/aws-lambda": "8.10.46",
     "@types/aws-serverless-express": "3.3.3",
     "@types/express": "4.17.3",
@@ -65,6 +66,7 @@
     "jest": "25.1.0",
     "lint-staged": "10.0.8",
     "prettier": "2.0.1",
+    "serverless": "^1.67.0",
     "serverless-plugin-typescript": "1.1.9",
     "supertest": "4.0.2",
     "ts-jest": "25.2.1",
@@ -74,6 +76,7 @@
     "typescript": "3.8.3"
   },
   "jest": {
+    "preset": "@shelf/jest-dynamodb",
     "moduleFileExtensions": [
       "js",
       "json",
