--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:watch": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:online": "cross-env IS_OFFLINE=false nest start",
     "deploy": "sls deploy --verbose",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
@@ -19,6 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "dbb:install": "sls dynamodb install",
+    "dbb:start": "sls dynamodb start",
     "genres": "ts-node genres.ts -- 'src/**/*.schema.ts' 'resources/dynamodb.yml'"
   },
   "dependencies": {
@@ -53,11 +56,13 @@
     "@types/jest": "25.1.4",
     "@types/js-yaml": "3.12.2",
     "@types/node": "13.9.3",
+    "@types/serverless": "^1.18.6",
     "@types/supertest": "2.0.8",
     "@types/uuid": "7.0.2",
     "@typescript-eslint/eslint-plugin": "2.24.0",
     "@typescript-eslint/parser": "2.24.0",
     "change-case": "4.1.1",
+    "cross-env": "^7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-import": "2.20.1",
@@ -67,6 +72,7 @@
     "lint-staged": "10.0.8",
     "prettier": "2.0.1",
     "serverless": "^1.67.0",
+    "serverless-dynamodb-local": "^0.2.39",
     "serverless-plugin-typescript": "1.1.9",
     "supertest": "4.0.2",
     "ts-jest": "25.2.1",
