ci(jest): increase timeout to 30s

--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testTimeout": 30000
   },
   "lint-staged": {
     "*.ts": [
