--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "start:online": "cross-env IS_OFFLINE=false nest start",
     "deploy": "sls deploy --verbose",
+    "package": "sls package",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
     "test:watch": "jest --watch",
