chore(ci): update renovate

--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "packageRules": [
     {
       "packageNames": ["nestjs-dynamoose", "dynamoose"],
-      "groupName": "nestjs-dynamoose"
+      "groupName": "nestjs-dynamoose packages"
     }
   ],
   "automerge": true,
