--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "baseUrl": "./",
     "incremental": true,
     "tsBuildInfoFile": ".tsbuildinfo",
-    "allowJs": true
+    "allowJs": true,
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules", "dist"]
 }
