fix(deps): update to nestjs-dynamoose 0.2.0

--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,12 @@
 {
+  "timezone": "Asia/Hong_Kong",
+  "schedule": "before 5am every weekday",
   "packageRules": [
     {
       "packageNames": ["nestjs-dynamoose", "dynamoose"],
       "groupName": "nestjs-dynamoose packages"
     }
   ],
-  "automerge": true,
+  "automerge": false,
   "extends": ["config:base"]
 }
