--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "deploy": "sls deploy --verbose",
     "package": "sls package",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "cross-env http_proxy= cross-env https_proxy= jest",
+    "test:watch": "cross-env http_proxy= cross-env https_proxy= jest --watch",
+    "test:cov": "cross-env http_proxy= cross-env https_proxy= jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "dbb:install": "sls dynamodb install",
-    "dbb:start": "sls dynamodb start",
+    "dbb:start": "cross-env http_proxy= cross-env https_proxy= sls dynamodb start",
     "genres": "ts-node genres.ts -- 'src/**/*.schema.ts' 'resources/dynamodb.yml'"
   },
   "dependencies": {
@@ -31,7 +31,8 @@
     "@nestjs/core": "7.0.9",
     "@nestjs/graphql": "7.3.7",
     "@nestjs/platform-express": "7.0.9",
-    "apollo-server-express": "2.13.0",
+    "apollo-server-core": "2.12.0",
+    "apollo-server-express": "2.12.0",
     "aws-serverless-express": "3.3.8",
     "dynamoose": "2.1.2",
     "graphql": "15.0.0",
