feat: add identity pool

--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@nestjs/platform-express": "7.5.3",
     "apollo-server-express": "2.19.0",
     "aws-serverless-express": "3.3.8",
+    "cfn-custom-resource-helper": "0.0.9",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "dynamoose": "2.3.0",
     "graphql": "15.4.0",
     "nestjs-dynamoose": "0.2.9",
     "reflect-metadata": "0.1.13",
+    "retryx": "0.0.7",
     "rimraf": "3.0.2",
     "rxjs": "6.6.3",
     "type-graphql": "1.1.1",
