feat: add iam passrole

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,7 @@ provider:
       Action:
         - cognito-identity:GetIdentityPoolRoles
         - cognito-identity:SetIdentityPoolRoles
+        - iam:PassRole
         - dynamodb:DescribeTable
         - dynamodb:Query
         - dynamodb:Scan
