--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/core": "9.2.1",
     "@nestjs/graphql": "10.1.7",
     "@nestjs/platform-express": "9.2.1",
+    "@sentry/node": "^7.26.0",
     "@vendia/serverless-express": "4.10.1",
     "apollo-server-express": "3.11.1",
     "class-transformer": "0.5.1",
@@ -70,6 +71,8 @@
     "eslint": "8.29.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
     "glob-promise": "5.0.0",
     "jest": "29.3.1",
     "js-yaml": "4.1.0",
