--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-IS_DDB_LOCAL = true
+# for local NestJS development
 SERVICE = aws-nestjs-starter
 STAGE = dev
 REGION = us-east-1
+IS_DDB_LOCAL = true
