--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,7 +25,9 @@ jobs:
         with:
           node-version: 18.x
           cache: 'npm'
-      - run: npm ci 
+      # use old version of @nestjs/platform-express, 
+      # remove --legacy-peer-deps once express is upgraded to v5
+      - run: npm ci --legacy-peer-deps
       - run: npm run lint
       - run: npm run build --if-present
       - run: npm run test:cov
