--- a/package.json
+++ b/package.json
@@ -30,48 +30,46 @@
   "dependencies": {
     "@apollo/server": "4.11.3",
     "@graphql-tools/merge": "9.0.22",
-    "@nestjs/apollo": "12.2.2",
-    "@nestjs/common": "10.4.15",
-    "@nestjs/config": "3.3.0",
-    "@nestjs/core": "10.4.15",
-    "@nestjs/graphql": "12.2.2",
+    "@nestjs/apollo": "13.0.3",
+    "@nestjs/common": "11.0.11",
+    "@nestjs/config": "4.0.1",
+    "@nestjs/core": "11.0.11",
+    "@nestjs/graphql": "13.0.3",
     "@nestjs/platform-express": "10.4.15",
     "@vendia/serverless-express": "4.12.6",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dynamoose": "4.0.3",
     "graphql": "16.10.0",
-    "husky": "9.1.7",
     "nestjs-dynamoose": "0.6.0",
     "reflect-metadata": "0.2.2",
-    "rimraf": "5.0.10",
+    "rimraf": "6.0.1",
     "rxjs": "7.8.2",
-    "uuid": "9.0.1"
+    "uuid": "11.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.7.1",
-    "@commitlint/config-conventional": "19.7.1",
-    "@nestjs/cli": "10.4.9",
-    "@nestjs/schematics": "10.2.3",
-    "@nestjs/testing": "10.4.15",
+    "@commitlint/cli": "19.8.0",
+    "@commitlint/config-conventional": "19.8.0",
+    "@nestjs/cli": "11.0.5",
+    "@nestjs/schematics": "11.0.2",
+    "@nestjs/testing": "11.0.11",
     "@shelf/jest-dynamodb": "3.5.0",
-    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@types/aws-lambda": "8.10.147",
-    "@types/express": "4.17.21",
+    "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "20.17.23",
+    "@types/node": "22.13.10",
     "@types/serverless": "3.12.27",
     "@types/supertest": "6.0.2",
-    "@types/uuid": "9.0.8",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "change-case": "5.4.4",
+    "@types/uuid": "10.0.0",
     "cross-env": "7.0.3",
-    "eslint": "8.57.1",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.31.0",
+    "eslint": "9.22.0",
+    "eslint-config-prettier": "10.1.1",
+    "eslint-plugin-prettier": "5.2.3",
     "glob-promise": "6.0.7",
+    "globals": "16.0.0",
+    "husky": "9.1.7",
     "jest": "29.7.0",
     "js-yaml": "4.1.0",
     "lint-staged": "15.4.3",
@@ -80,12 +78,14 @@
     "serverless-dynamodb-local": "0.2.40",
     "serverless-offline": "13.9.0",
     "serverless-plugin-typescript": "2.1.5",
-    "supertest": "6.3.4",
+    "source-map-support": "0.5.21",
+    "supertest": "7.0.0",
     "ts-jest": "29.2.6",
     "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.26.1"
   },
   "jest": {
     "preset": "@shelf/jest-dynamodb",
