--- a/package.json
+++ b/package.json
@@ -29,17 +29,18 @@
   },
   "dependencies": {
     "@apollo/server": "4.11.3",
-    "@graphql-tools/merge": "9.0.22",
+    "@graphql-tools/merge": "9.0.24",
     "@nestjs/apollo": "13.0.3",
     "@nestjs/common": "11.0.11",
     "@nestjs/config": "4.0.1",
     "@nestjs/core": "11.0.11",
     "@nestjs/graphql": "13.0.3",
-    "@nestjs/platform-express": "10.4.15",
+    "@nestjs/platform-express": "11.0.11",
     "@vendia/serverless-express": "4.12.6",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dynamoose": "4.0.3",
+    "express": "5.0.1",
     "graphql": "16.10.0",
     "nestjs-dynamoose": "0.6.0",
     "reflect-metadata": "0.2.2",
@@ -72,7 +73,7 @@
     "husky": "9.1.7",
     "jest": "29.7.0",
     "js-yaml": "4.1.0",
-    "lint-staged": "15.4.3",
+    "lint-staged": "15.5.0",
     "prettier": "3.5.3",
     "serverless": "3.40.0",
     "serverless-dynamodb-local": "0.2.40",
