feat: enable individual packaging for serverless functions

--- a/serverless.yml
+++ b/serverless.yml
@@ -42,6 +42,9 @@ custom:
       migrate: true
       seed: false
 
+package:
+  individually: true
+
 functions:
   index-function:
     handler: src/index.handler
